# mcp-server-flyder

./: README.md  pyproject.toml
src/mcp_server_flyder/: __init__.py  server.py
