[project]
name = "mcp-server-flyder"
version = "0.1.0"
description = "MCP Server for Flyder"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
]

[project.scripts]
mcp-server-flyder = "mcp-server-flyder:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
]
